--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,6 +14,8 @@
         <li>Bootstrap 5</li>
         <li>HTML</li>
         <li>CSS</li>
+        <li>Javascript</li>
+
     </p>
     <%- include('partials/footer')%>
 </body>
