--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Protocolo de Comunicación</a>
+      <a class="navbar-brand" href="/">Protocolo de Comunicación</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,7 +16,7 @@
             <a class="nav-link" href="/signup">Registro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Chat</a>
+            <a class="nav-link " href="/chat" >Chat</a>
           </li>
         </ul>
       </div>
