--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -7,10 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/signin">Login</a>
+            <a class="nav-link" href="/">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/signup">Registro</a>
